[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
actix-web = "4.0.0-beta.8"
diesel = { version = "=2.1.4", features = [
    "extras",
    "uuid",
    "numeric",
    "chrono",
] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
tokio = "1.36.0"
thiserror = "1.0.57"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = "0.4.35"
reqwest = { version = "0.11.25", features = ["json"] }
log = "0.4.21"
anyhow = "1.0.80"
fern = "0.6.2"
colored = "2.1.0"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
